# Cataclysm-BN

./: .emmyrc.json  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  GOAL.md  Makefile  PLAN.md  README.md  changelog.md  cmake-build.bat  cmake-build.ps1  co-author attribution  construction.json  construction_category.json  construction_group.json  credits  deconstruction.json  deno.jsonc  item.json  locations.json  lua_annotations.lua  opencode.json  
data/: CMakeLists.txt
data/XDG/: org.cataclysmbn.CataclysmBN.metainfo.xml
data/dialogue/: common.yarn  demo_mod.yarn  dialogue.yarnproject  dialogue.ysls.json  shelter_npc.yarn
data/json/: achievements.lua  ammo_effects.json  artifact_analyzer.lua  artifact_compass.lua  backroom_dimension.json  bionics.json  clothing_mods.json  construction_category.json  construction_group.json  contextual_actions.json  deconstruction.json  door_key.lua  effects.json  enchantment_flags.json  enchantment_types.json  enchantment_values.json  enchantments.json  field_type.json  flags.json  flags_mutation.json  harvest.json  hunting_data.json  item_actions.json  item_var_viewer.lua  lua_traits.lua  main.lua  morale_types.json  named_colors.json  nyctophobia.lua  outfit_swap.lua  player_activities.json  plumbing.lua  preload.lua  proc.lua  procgen.lua  professions.json  regional_map_settings.json  scenarios.json  slimepit.lua  sonar.lua  (+13 more)
data/json/artifact/: premade_artifacts.json
data/json/construction/: construct.json  construct_deco.json  construct_farm_wood.json  construct_furn.json  construct_hunting.json  construct_workshop.json
data/json/external_tileset/: External_Tileset_DP_Hair.json  External_Tileset_DP_Normal.json  External_Tileset_DP_Skin.json  External_Tileset_DP_Tall.json  External_Tileset_DP_dmd.json  armor.json  bike_parts.json  bodyhaircolourable.json  vehicle_parts.json
data/json/furniture_and_terrain/: furniture-appliances.json  furniture-barriers.json  furniture-emitters.json  furniture-hunting.json  furniture-plumbing.json  furniture-recreation.json  furniture-storage.json  furniture-terrains.json  furniture-tools.json  t_pd_border.json  terrain-floors-indoor.json  terrain-liquids.json  terrain-manufactured.json  terrain-walls.json  terrain-windows.json  terrain-zlope.json
data/json/itemgroups/: bionics.json  books.json  collections_domestic.json  collections_trades.json  food_service.json  main.json  military.json  roof.json  science_and_tech.json  stashes.json  supplies.json  tools.json  vehicles_destroy.json
data/json/items/: ammo.json  ammo_types.json  bionics.json  chemicals_and_resources.json  containers.json  fake.json  furniture.json  generic.json  handloaded_bullets.json  newspaper.json  software.json  terrain.json  tool_armor.json
data/json/lua/: achievement_runtime.lua  minirose.lua  plumbing.lua  robofac.lua  zlope.lua
data/json/map/: map_feature_descriptions.json
data/json/mapgen/: bunker.json  cargoship.json  drive-in_theater.json  farm_tree.json  garage_gas.json  hunting_lodge.json  industrial_center.json  lake.json  lumbermill.json  movie_theater.json  orchard_apple.json  regional_airport.json  robofachq_static.json  s_lightindustry.json  ws_fire_lookout_tower.json
data/json/mapgen_palettes/: aircraft_carrier_palette.json  airliner_palette.json  apartment.json  basement.json  bastion_fort_palette.json  bike_shop_palette.json  building.json  cabin.json  campground.json  cathedral_palette.json  cground.json  church.json  city_block_palette.json  collapsed_tower.json  convention_center_palette.json  farm.json  farm_horse.json  farm_lots.json  fema.json  fire_station_palette.json  hospital.json  house_general_palette.json  house_w_palette.json  industrial_center_palette.json  irradiator_palette.json  lab_modular_palette.json  lab_surface_palette.json  lmoe.json  lodge_palette.json  lumberyard.json  mall_palette.json  mansion.json  megastore_palette.json  microlab.json  mil_airfield_palette.json  mil_blacksite_palette.json  mil_surplus.json  miniature_railway_palette.json  movie_theater_palette.json  office.json  (+12 more)
data/json/monster_special_attacks/: spells.json
data/json/monsterdrops/: feral_humans.json  misc.json  mutant_experimental.json  zombie_cop.json  zombie_lab.json  zombie_technician.json
data/json/monstergroups/: eggs.json  robots.json  zombie_upgrades.json  zombies.json
data/json/monsters/: defense_bot.json  feral_humans.json  fish.json  fungus.json  insect_spider.json  mammal.json  mechsuits.json  misc.json  mutant_animal.json  mutant_human.json  nether.json  triffid.json  turrets.json  zed-classic.json  zed_explosive.json  zed_lab.json  zed_misc.json  zed_soldiers.json
data/json/mutations/: mutation_type.json  (+3 more)
data/lua/: README.md
data/mods/: default.json
data/raw/: docgen_common.lua  generate_docs.lua  generate_types.lua
data/shaders/: lm_ambient_compute.dxil  lm_ambient_compute.msl  lm_ambient_compute.spv  lm_clear_seen_compute.dxil  lm_clear_seen_compute.msl  lm_clear_seen_compute.spv  lm_clear_seen_view_compute.dxil  lm_clear_seen_view_compute.msl  lm_clear_seen_view_compute.spv  lm_color_raytrace_compute.dxil  lm_color_raytrace_compute.msl  lm_color_raytrace_compute.spv  lm_daylight_diffuse_compute.dxil  lm_daylight_diffuse_compute.msl  lm_daylight_diffuse_compute.spv  lm_fill_float_compute.dxil  lm_fill_float_compute.msl  lm_fill_float_compute.spv  lm_fill_uint_compute.dxil  lm_fill_uint_compute.msl  lm_fill_uint_compute.spv  lm_max_uint_compute.dxil  lm_max_uint_compute.msl  lm_max_uint_compute.spv  lm_raytrace_compute.dxil  lm_raytrace_compute.msl  lm_raytrace_compute.spv  lm_seen_compute.dxil  lm_seen_compute.msl  lm_seen_compute.spv  lm_seen_walls_compute.dxil  lm_seen_walls_compute.msl  lm_seen_walls_compute.spv  lm_shift_float_compute.dxil  lm_shift_float_compute.msl  lm_shift_float_compute.spv  lm_shift_uint_compute.dxil  lm_shift_uint_compute.msl  lm_shift_uint_compute.spv  lm_sight_pairs_compute.dxil  (+12 more)
data/title/: scug_en.title
tools/slang_probe/: CMakeLists.txt  README.md  max_probe.slang  max_probe_runner.cpp
(+1840 files in other folders)
